@@ -100,5 +100,5 @@ ADD_INTERFACE (Text_script,"text-script-interface",
  */
 ADD_INTERFACE (Script_interface, "script-interface",
   "An object that is put above or below a note",
-  "add-stem-support slur script-priority script-stencil inside-slur");
+  "add-stem-support slur-padding slur script-priority script-stencil inside-slur");
 
